# ms-asr-widget

./: .gitignore  build_dmg.sh  build_exe.ps1  config.toml  installer.iss  pyproject.toml  setup_mac.py  test_headless.py
assets/: generate_icon.py  icon.icns  png_to_icns.sh
src/asr_widget/: config.py  main.py
src/asr_widget/activation/: __init__.py  base.py  click.py  hotkey.py  wakeword.py
src/asr_widget/asr/: client.py
src/asr_widget/audio/: capture.py
src/asr_widget/output/: __init__.py  keystroke.py  keystroke_mac.py  keystroke_win.py
src/asr_widget/ui/: __init__.py  setup_dialog_mac.py  setup_wizard.py  statusbar.py  statusbar_mac.py  statusbar_win.py  widget.py  widget_mac.py  widget_win.py
