[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-asr-widget"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "pynput>=1.7.6",
    "tomli>=2.0.0;python_version<'3.12'",
]

[project.scripts]
asr-widget = "asr_widget.main:main"

[tool.setuptools.packages.find]
where = ["src"]
